Mention Coverity's contribution.

--- a/binutils/NEWS
+++ b/binutils/NEWS
@@ -1,4 +1,7 @@
 -*- text -*-
+* Resolved 37 coding problems in bfd including static array overruns, null
+  pointer dereferences and use of a malloc buffer after it has been freed, as
+  revealed by static analysis donated by Coverity, Inc. (http://scan.coverity.com).
 
 * The binutils sources are now released under version 3 of the GNU General
   Public License.
